--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "parsimmon": "^1.18.1",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.77.6",
     "swr": "^2.2.4"
   },
   "devDependencies": {
